--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -35,7 +35,7 @@
         </fieldset>
         </form>
         <p> 
-          Contact E-mail: santiagobassani2000@gmail.com
+          Contact E-mail:
         </p>
     </section>
 </body>
