--- a/pages/sucursales.html
+++ b/pages/sucursales.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/css/style.css">
-    <title>Sucursales</title>
+    <title>About Us</title>
 </head>
 <body>
     <header>
@@ -14,9 +14,9 @@
             <ul>
                 <li><a href="/mipagina.html">Main Page</a></li>
                 <li><a href="../pages/reviews.html">Reviews</a></li>
-                <li><a href="/pages/contacto.html">Contact Us</a></li>
-                <li><a href="/pages/sucursales.html">Where are we at</a></li>
-                <li><a href="/pages/formulario.html">Subscribe to our Newsletter!!</a></li>
+                <li><a href="/pages/contacto.html">Contact</a></li>
+                <li><a href="/pages/sucursales.html">About Us</a></li>
+                <li><a href="/pages/formulario.html">Newsletter</a></li>
             </ul>
         </nav>
     </header>
