--- a/mipagina.html
+++ b/mipagina.html
@@ -7,11 +7,9 @@
     <link rel="stylesheet" href="css/style.css">
     <title>Top Rated Reviews</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" integrity="sha512-zJbYYeWY2lNZzVSW+JAhCkE02/QWZDtxB+VpupOPh3E7JNhWPOY9qb7V1J6QvA8RJW6Z+Kr6w5UvlQ1tbI/YjQ==" crossorigin="anonymous" />
-
-
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" integrity="sha512-zJbYYeWY2lNZzVSW+JAhCkE02/QWZDtxB+VpupOPh3E7JNhWPOY9qb7V1J6QvA8RJW6Z+Kr6w5UvlQ1tbI/YjQ==" crossorigin="anonymous" />
 
 </head>
 <body>
@@ -21,9 +19,9 @@
             <ul>
                 <li><a href="/mipagina.html">Main Page</a></li>
                 <li><a href="/pages/reviews.html">Reviews</a></li>
-                <li><a href="/pages/contacto.html">Contact Us</a></li>
-                <li><a href="/pages/sucursales.html">Where are we at</a></li>
-                <li><a href="/pages/formulario.html">Subscribe to our Newsletter!!</a></li>
+                <li><a href="/pages/contacto.html">Contact</a></li>
+                <li><a href="/pages/sucursales.html">About Us</a></li>
+                <li><a href="/pages/formulario.html">Newsletter</a></li>
             </ul>
         </nav>
     </header>
