--- a/pages/formulario.html
+++ b/pages/formulario.html
@@ -14,9 +14,9 @@
             <ul>
                 <li><a href="../mipagina.html">Main Page</a></li>
                 <li><a href="../pages/reviews.html">Reviews</a></li>
-                <li><a href="/pages/contacto.html">Contact Us</a></li>
-                <li><a href="/pages/sucursales.html">Where are we at</a></li>
-                <li><a href="/pages/formulario.html">Subscribe to our Newsletter!!</a></li>
+                <li><a href="/pages/contacto.html">Contact</a></li>
+                <li><a href="/pages/sucursales.html">About Us</a></li>
+                <li><a href="/pages/formulario.html">Newsletter</a></li>
             </ul>
         </nav>
     </header>
