Cambios en la estructura del home. Falta el responsive pero es solo pegar queries

--- a/pages/sucursales.html
+++ b/pages/sucursales.html
@@ -24,6 +24,7 @@
     <section>
         <article class="developers">
             <h1>Developers</h1>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Mollitia ut repellat tenetur soluta repudiandae itaque accusantium, distinctio nostrum ea quae! Perspiciatis iusto numquam nam architecto nobis cum reprehenderit nihil accusamus!</p>
         </article>
         <article class="branches-location">
             <h1>Want a coffe? Come to meet us</h1>
