Archivo JS para los botones de read more and read less Arregle el responsive del Home Agregue una especie de carrousel para estrenos en el home

--- a/mipagina.html
+++ b/mipagina.html
@@ -47,6 +47,18 @@
                         <img src="/img/dnd images/sorcerer.png" width="50%" title= "Title" alt="">
                         <h3>Peli 4</h3>
                     </div>
+                    <div>
+                        <img src="/img/dnd images/sorcerer.png" width="50%" title= "Title" alt="">
+                        <h3>Peli 4</h3>
+                    </div>
+                    <div>
+                        <img src="/img/dnd images/sorcerer.png" width="50%" title= "Title" alt="">
+                        <h3>Peli 4</h3>
+                    </div>
+                    <div>
+                        <img src="/img/dnd images/sorcerer.png" width="50%" title= "Title" alt="">
+                        <h3>Peli 4</h3>
+                    </div>
             </article>
             <h2 class="title-news">Latest News</h2>
             <article class="img1">
@@ -73,7 +85,7 @@
         </section>
         <aside>
             <div class="categories">
-                <h1>Reviews Categories</h1>
+                <h2>Reviews Categories</h2>
                 <ul>
                     <li><a href="/pages/reviews.html#action">Action</a></li>
                     <li><a href="/pages/reviews.html#comedy">Comedy</a></li>
