--- a/mipagina.html
+++ b/mipagina.html
@@ -106,6 +106,7 @@
                 <li><a href="https://twitter.com/"><i class="fa-brands fa-twitter"></i>Twitter</a></li>
                 <li><a href="https://www.facebook.com/"><i class="fa-brands fa-facebook"></i>Facebook</a></li>
             <span>PRUEBA</span>
+            <span>PRUEBA2</span>
 
             
         </nav>
