--- a/mipagina.html
+++ b/mipagina.html
@@ -107,6 +107,7 @@
                 <li><a href="https://www.facebook.com/"><i class="fa-brands fa-facebook"></i>Facebook</a></li>
             <span>PRUEBA</span>
             <span>PRUEBA2</span>
+            <SPAN>PRUEBA3</SPAN>
 
             
         </nav>
