--- a/mipagina.html
+++ b/mipagina.html
@@ -107,7 +107,8 @@
                 <li><a href="https://www.facebook.com/"><i class="fa-brands fa-facebook"></i>Facebook</a></li>
             <span>PRUEBA</span>
             <span>PRUEBA2</span>
-            <SPAN>PRUEBA3</SPAN>
+            <span>PRUEBA3</span>
+            <span>PRUEBA4</span>
 
             
         </nav>
