--- a/mipagina.html
+++ b/mipagina.html
@@ -109,6 +109,7 @@
             <span>PRUEBA2</span>
             <span>PRUEBA3</span>
             <span>PRUEBA4</span>
+            <span>Prueba5</span>
 
             
         </nav>
