--- a/mipagina.html
+++ b/mipagina.html
@@ -110,6 +110,8 @@
             <span>PRUEBA3</span>
             <span>PRUEBA4</span>
             <span>Prueba5</span>
+            <span>Prueba6</span>
+
 
             
         </nav>
