--- a/html.html
+++ b/html.html
@@ -9,8 +9,9 @@
 <body>
     <h1>Hola Mun</h1>
     <h1>Hola Mundoooo</h1>
-    <h2>HEy</h2>
-    <h3>ererer</h3>
+    <h2 class="vista">HEy</h2>
+    <h3 class="saludo">ererer</h3>
+    <h4>oiuouoiu</h4>
 </body>
 
 </html>
