--- a/mipagina.html
+++ b/mipagina.html
@@ -105,7 +105,7 @@
                 <li><a href="https://www.reddit.com/"><i class="fa-brands fa-reddit"></i>Reddit</a></li>
                 <li><a href="https://twitter.com/"><i class="fa-brands fa-twitter"></i>Twitter</a></li>
                 <li><a href="https://www.facebook.com/"><i class="fa-brands fa-facebook"></i>Facebook</a></li>
-             
+                <span>prueba</span>
         </nav>
     </footer>
 </body>
