Cambios en el menu y el aside. Agregue animaciones

--- a/pages/reviews.html
+++ b/pages/reviews.html
@@ -13,11 +13,11 @@
         <h1 id="title">Top Rated Reviews</h1>
         <nav class="menu-simple-menu">
             <ul>
-                <li><a href="../mipagina.html">Main Page</a></li>
-                <li><a href="../pages/reviews.html">Reviews</a></li>
-                <li><a href="/pages/sucursales.html">About Us</a></li>
-                <li><a href="/pages/contacto.html">Contact</a></li>
-                <li><a href="/pages/formulario.html">Newsletter</a></li>
+                <li><a href="/mipagina.html"><span>Main Page</span></a></li>
+                <li><a href="/pages/reviews.html"><span>Reviews</span></a></li>
+                <li><a href="/pages/sucursales.html"><span>About Us</span></a></li>
+                <li><a href="/pages/contacto.html"><span>Contact</span></a></li>
+                <li><a href="/pages/formulario.html"><span>Newsletter</span></a></li>
             </ul>
         </nav>
     </header>
