--- a/mipagina.html
+++ b/mipagina.html
@@ -17,11 +17,11 @@
         <h1 id="title">Top Rated Reviews</h1>
         <nav class="menu-simple-menu">
             <ul>
-                <li><a href="/mipagina.html">Main Page</a></li>
-                <li><a href="/pages/reviews.html">Reviews</a></li>
-                <li><a href="/pages/sucursales.html">About Us</a></li>
-                <li><a href="/pages/contacto.html">Contact</a></li>
-                <li><a href="/pages/formulario.html">Newsletter</a></li>
+                <li><a href="/mipagina.html"><span>Main Page</span></a></li>
+                <li><a href="/pages/reviews.html"><span>Reviews</span></a></li>
+                <li><a href="/pages/sucursales.html"><span>About Us</span></a></li>
+                <li><a href="/pages/contacto.html"><span>Contact</span></a></li>
+                <li><a href="/pages/formulario.html"><span>Newsletter</span></a></li>
             </ul>
         </nav>
     </header>
@@ -87,10 +87,10 @@
             <div class="categories">
                 <h2>Reviews Categories</h2>
                 <ul>
-                    <li><a href="/pages/reviews.html#action">Action</a></li>
-                    <li><a href="/pages/reviews.html#comedy">Comedy</a></li>
-                    <li><a href="/pages/reviews.html#drama">Drama</a></li>
-                    <li><a href="/pages/reviews.html#suspense">Suspense</a></li>
+                    <li><a href="/pages/reviews.html#action"><span>Action</span></a></li>
+                    <li><a href="/pages/reviews.html#comedy"><span>Comedy</span></a></li>
+                    <li><a href="/pages/reviews.html#drama"><span>Drama</span></a></li>
+                    <li><a href="/pages/reviews.html#suspense"><span>Suspense</span></a></li>
                 </ul>
             </div>
         </aside>
