--- a/mipagina.html
+++ b/mipagina.html
@@ -14,7 +14,12 @@
 </head>
 <body>
     <header>
-        <h1 id="title">Top Rated Reviews</h1>
+        <div class="site-branding">
+            <div class="brand-logo">
+                <img src="/brand/trr7.png" alt="trr-logo">
+            </div>
+            <h1 id="title">Top Rated Reviews</h1>
+        </div>
         <nav class="menu-simple-menu">
             <ul>
                 <li><a href="/mipagina.html"><span>Main Page</span></a></li>
