--- a/pages/reviews.html
+++ b/pages/reviews.html
@@ -10,7 +10,12 @@
 
 <body>
     <header>
-        <h1 id="title">Top Rated Reviews</h1>
+        <div class="site-branding">
+            <div class="brand-logo">
+                <img src="/brand/trr7.png" alt="trr-logo">
+            </div>
+            <h1 id="title">Top Rated Reviews</h1>
+        </div>
         <nav class="menu-simple-menu">
             <ul>
                 <li><a href="/mipagina.html"><span>Main Page</span></a></li>
