--- a/pages/formulario.html
+++ b/pages/formulario.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="/favicon/trr7.ico">
     <link rel="stylesheet" href="/css/style.css">
-    <title>Formulario</title>
+    <title>Top Rated Reviews: Newsletter</title>
 </head>
 <body>
     <header>
