Complete el contenido del home. Arregle problema con responsive de imagenes Ajuste tamaños de letras Genere las imagenes de News con AI y contenido con chatgpt

--- a/mipagina.html
+++ b/mipagina.html
@@ -68,25 +68,49 @@
             </article>
             <h2 class="title-news">Latest News</h2>
             <article class="img1">
-                <img src="/img/dnd images/sorcerer.png" width="50%" alt="sorcerer">
+                <img src="/img/news/inception2.png" width="50%" alt="inception2">
             </article>
             <article class="new1">
-                <h3>Begginers Guide to Play Tabletop</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit temporibus incidunt, excepturi ducimus corporis qui. Voluptatibus debitis velit iste similique, reiciendis dicta explicabo porro a cum aut? Temporibus, consequuntur ea!</p>
+                <h3>Sci-Fi Thriller 'Inception 2' Confirmed: Nolan and DiCaprio Reunite for Mind-Bending Sequel</h3>
+                <p>In a thrilling announcement that sent shockwaves through the entertainment world, director Christopher Nolan and actor Leonardo DiCaprio have officially confirmed their collaboration on the highly anticipated sequel, "Inception 2." The original film, released in 2010, took audiences on a mind-bending journey through dreams and reality, leaving them captivated and hungry for more. While specific plot details for "Inception 2" remain under wraps, insiders suggest that the sequel will once again push the boundaries of imagination with its mind-bending twists and turns.</p>
+                <p>Fans are buzzing with excitement as DiCaprio returns to the "Inception" universe, reprising his role as Dom Cobb, a skilled extractor who ventures into the dreams of others. DiCaprio's performance in the first film garnered critical acclaim, and his collaboration with Nolan has been highly praised in the past. The reunion of these two creative powerhouses promises to deliver another captivating cinematic experience that will leave audiences questioning their perception of reality.</p>
+                <p>Production for "Inception 2" is slated to begin later this year, with a release date anticipated for the following year. As fans eagerly await the sequel, rumors are already circulating about the potential return of other cast members from the original film, adding to the excitement surrounding the project. With Nolan's innovative storytelling and visual prowess combined with DiCaprio's exceptional talent, "Inception 2" is poised to transport audiences to a mesmerizing world that defies the boundaries of the imagination.</p>                
             </article>
             <article class="img2">
-                <img src="/img/dnd images/monsters.jpg" width="50%" alt="sorcerer">
+                <img src="/img/news/female_justice_league.png" width="50%" alt="female_justice_league">
             </article>
             <article class="new2">
-                <h3>Begginers Guide to Play Tabletop</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit temporibus incidunt, excepturi ducimus corporis qui. Voluptatibus debitis velit iste similique, reiciendis dicta explicabo porro a cum aut? Temporibus, consequuntur ea!</p>
+                <h3>Female Superheroes Take Center Stage: 'Justice League: United' Brings Iconic Heroines Together</h3>
+                <p>Warner Bros. Studios is set to make history with the release of "Justice League: United," an empowering superhero film that brings together an all-female lineup of iconic characters. The movie aims to celebrate and showcase the strength, resilience, and unwavering determination of women in the cinematic universe. Wonder Woman, Supergirl, Batwoman, and Black Canary headline the team, each bringing their unique abilities and perspectives to the table.</p>
+                <p>Gal Gadot's return as Wonder Woman in "Justice League: United" has generated immense excitement among fans. Her portrayal of the Amazonian warrior in previous films has garnered widespread acclaim and solidified her as a symbol of female empowerment. Joining her is Supergirl, the cousin of Superman, known for her extraordinary powers and unwavering commitment to justice. Batwoman, a skilled detective and martial artist, adds a street-level perspective to the team, while Black Canary's sonic scream and exceptional combat skills bring a powerful dynamic to the ensemble.</p>
+                <p>With its all-female superhero lineup, "Justice League: United" marks a significant step towards inclusivity and gender equality in the superhero genre. The film aims to inspire audiences of all ages, showcasing the strength, courage, and resilience of female superheroes. Warner Bros. Studios hopes to create a lasting impact with this empowering portrayal, celebrating the heroism and potential within every woman.</p>
             </article>
             <article class="img3">
-                <img src="/img/dnd images/tavern party.jpg" width="50%" alt="sorcerer">
+                <img src="/img/news/virtual_reality_film.png" width="50%" alt="virtual_reality_film">
             </article>
             <article class="new3">
-                <h3>Begginers Guide to Play Tabletop</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit temporibus incidunt, excepturi ducimus corporis qui. Voluptatibus debitis velit iste similique, reiciendis dicta explicabo porro a cum aut? Temporibus, consequuntur ea!</p>
+                <h3>Groundbreaking Virtual Reality Film 'Dreamscape' Redefines Immersive Storytelling</h3>
+                <p>Prepare to enter a new realm of cinematic experience with the groundbreaking virtual reality film, "Dreamscape." This highly innovative project, created by visionary director Ava Johnson, is set to redefine immersive storytelling and transport audiences into a realm where dreams and reality seamlessly merge.</p>
+                <p>In "Dreamscape," viewers don VR headsets and embark on a mind-altering adventure, delving into the subconscious minds of characters and witnessing their dreams unfold in real-time. The film combines elements of mystery, fantasy, and psychological thriller genres, creating a multi-layered narrative that challenges perceptions and invites audiences to question their own reality.</p>
+                <p>"Dreamscape" is set to premiere at select film festivals later this year, with a wider release planned for the following year. As anticipation grows, audiences are eager to step into this groundbreaking virtual reality adventure and explore the limitless possibilities of immersive storytelling. With "Dreamscape," Ava Johnson has truly unlocked the potential of virtual reality as a medium for profound and transformative cinematic experiences.</p>
+            </article>
+            <article class="img4">
+                <img src="/img/news/sofia_martinez.png" width="50%" alt="sofia_martinez">
+            </article>
+            <article class="new4">
+                <h3>Acclaimed Director Sofia Martinez Tackles Untold Story in 'Hidden Horizons</h3>
+                <p>Prepare to enter a new realm of cinematic experience with the groundbreaking virtual reality film, "Dreamscape." This highly innovative project, created by visionary director Ava Johnson, is set to redefine immersive storytelling and transport audiences into a realm where dreams and reality seamlessly merge.</p>
+                <p>"Hidden Horizons" delves into a captivating tale set during World War II, chronicling the courageous acts of a group of resistance fighters. Through their bravery and determination, these unsung heroes played a pivotal role in thwarting the enemy's plans. The film aims to honor their sacrifices and ensure their stories are not lost to time.</p>
+                <p>Martinez's choice to bring this untold story to the big screen showcases her commitment to portraying diverse perspectives and shedding light on lesser-known historical events. With her distinct directorial style and attention to detail, audiences can expect a captivating and emotionally resonant cinematic experience. As production for "Hidden Horizons" gets underway, fans of Martinez's work eagerly anticipate another thought-provoking masterpiece that will leave a lasting impact.</p>
+            </article>
+            <article class="img5">
+                <img src="/img/news/luminary_awards.png" width="50%" alt="luminary_awards">
+            </article>
+            <article class="new5">
+                <h3>Introducing 'The Luminary Awards': Honoring Excellence in Film and Television</h3>
+                <p>A new awards ceremony, "The Luminary Awards," is set to make its debut, celebrating excellence in the world of film and television. This prestigious event aims to recognize outstanding achievements in various categories, including acting, directing, writing, and cinematography.</p>
+                <p>"The Luminary Awards" will shine a spotlight on the exceptional talents and groundbreaking contributions of individuals and projects that have made a significant impact in the industry. The ceremony promises to be a star-studded affair, bringing together some of the biggest names in film and television to celebrate artistic excellence and innovation.</p>
+                <p>As anticipation builds for the inaugural edition of "The Luminary Awards," industry professionals and fans alike eagerly await the announcement of nominees and the recognition of exceptional achievements. The ceremony promises to be an unforgettable evening, honoring the visionaries and luminaries who have left an indelible mark on the world of film and television.</p>
             </article>
         </section>
         <aside>
