--- a/pages/reviews.html
+++ b/pages/reviews.html
@@ -51,7 +51,7 @@
                     <div class="picture">
                         <img src="/img/movies/action/bullet_train.jpg" width="50%" alt="bullet_train">
                         <br><br>
-                        <a class="btn-trailer" href="https://youtu.be/FUK2kdPsBws" target="_blank">Watch Trailer</a>
+                        <a class="btn-trailer" href="https://youtu.be/0IOsk2Vlc4o" target="_blank">Watch Trailer</a>
                     </div>
                     <div class="description">
                         <p>
@@ -67,7 +67,7 @@
                     <div class="picture">
                         <img src="/img/movies/action/65.jpg" width="50%" alt="65">
                         <br><br>
-                        <a class="btn-trailer" href="https://youtu.be/FUK2kdPsBws" target="_blank">Watch Trailer</a>
+                        <a class="btn-trailer" href="https://youtu.be/bHXejJq5vr0" target="_blank">Watch Trailer</a>
                     </div>
                     <div class="description">
                         <p>
@@ -83,7 +83,7 @@
                     <div class="picture">
                         <img src="/img/movies/action/operation_fortune_ruse.jpg" width="50%" alt="operation_fortune_ruse">
                         <br><br>
-                        <a class="btn-trailer" href="https://youtu.be/FUK2kdPsBws" target="_blank">Watch Trailer</a>
+                        <a class="btn-trailer" href="https://youtu.be/WdZ-BWWQcWQ" target="_blank">Watch Trailer</a>
                     </div>
                     <div class="description">
                         <p>
@@ -101,7 +101,7 @@
                     <div class="picture">
                         <img src="/img/movies/comedy/superbad.jpg" width="50%" alt="superbad">
                         <br><br>
-                        <a class="btn-trailer" href="https://youtu.be/FUK2kdPsBws" target="_blank">Watch Trailer</a>
+                        <a class="btn-trailer" href="https://youtu.be/LvKvus3vCEY" target="_blank">Watch Trailer</a>
                     </div>
                     <div class="description">
                         <p>
@@ -117,7 +117,7 @@
                     <div class="picture">
                         <img src="/img/movies/comedy/red.jpg" width="50%" alt="turning_red">
                         <br><br>
-                        <a class="btn-trailer" href="https://youtu.be/FUK2kdPsBws" target="_blank">Watch Trailer</a>
+                        <a class="btn-trailer" href="https://youtu.be/XdKzUbAiswE" target="_blank">Watch Trailer</a>
                     </div>
                     <div class="description">
                         <p>
@@ -133,7 +133,7 @@
                     <div class="picture">
                         <img src="/img/movies/comedy/project_x.jpg" width="50%" alt="project_x">
                         <br><br>
-                        <a class="btn-trailer" href="https://youtu.be/FUK2kdPsBws" target="_blank">Watch Trailer</a>
+                        <a class="btn-trailer" href="https://youtu.be/3BEIhA8CcY0" target="_blank">Watch Trailer</a>
                     </div>
                     <div class="description">
                         <p>
@@ -149,7 +149,7 @@
                     <div class="picture">
                         <img src="/img/movies/comedy/horrible_bosses.jpg" width="50%" alt="horrible_bosses">
                         <br><br>
-                        <a class="btn-trailer" href="https://youtu.be/FUK2kdPsBws" target="_blank">Watch Trailer</a>
+                        <a class="btn-trailer" href="https://youtu.be/VpUeQV8sdOc" target="_blank">Watch Trailer</a>
                     </div>
                     <div class="description">
                         <p>
@@ -166,7 +166,7 @@
                     <div class="picture">
                         <img src="/img/movies/drama/manchester_by_the_Sea.jpg" width="50%" alt="manchester_by_the_Sea">
                         <br><br>
-                        <a class="btn-trailer" href="https://youtu.be/FUK2kdPsBws" target="_blank">Watch Trailer</a>
+                        <a class="btn-trailer" href="https://youtu.be/gsVoD0pTge0" target="_blank">Watch Trailer</a>
                     </div>
                     <div class="description">
                         <p>
@@ -182,7 +182,7 @@
                     <div class="picture">
                         <img src="/img/movies/drama/hachi_a_dogs_tale.jpg" width="50%" alt="hachi_a_dogs_tale">
                         <br><br>
-                        <a class="btn-trailer" href="https://youtu.be/FUK2kdPsBws" target="_blank">Watch Trailer</a>
+                        <a class="btn-trailer" href="https://youtu.be/Y6U7mAnPtw4" target="_blank">Watch Trailer</a>
                     </div>
                     <div class="description">
                         <p>
@@ -198,7 +198,7 @@
                     <div class="picture">
                         <img src="/img/movies/drama/million_dollar_baby.jpg" width="50%" alt="million_dollar_baby">
                         <br><br>
-                        <a class="btn-trailer" href="https://youtu.be/FUK2kdPsBws" target="_blank">Watch Trailer</a>
+                        <a class="btn-trailer" href="https://youtu.be/2FkyuKKtQqo" target="_blank">Watch Trailer</a>
                     </div>
                     <div class="description">
                         <p>
@@ -214,7 +214,7 @@
                     <div class="picture">
                         <img src="/img/movies/drama/three_billboards_outside.jpg" width="50%" alt="three_billboards_outside">
                         <br><br>
-                        <a class="btn-trailer" href="https://youtu.be/FUK2kdPsBws" target="_blank">Watch Trailer</a>
+                        <a class="btn-trailer" href="https://youtu.be/Jit3YhGx5pU" target="_blank">Watch Trailer</a>
                     </div>
                     <div class="description">
                         <p>
@@ -231,7 +231,7 @@
                     <div class="picture">
                         <img src="/img/movies/suspense/midsommar.jpg" width="50%" alt="midsommar">
                         <br><br>
-                        <a class="btn-trailer" href="https://youtu.be/FUK2kdPsBws" target="_blank">Watch Trailer</a>
+                        <a class="btn-trailer" href="https://youtu.be/1Vnghdsjmd0" target="_blank">Watch Trailer</a>
                     </div>
                     <div class="description">
                         <p>
@@ -247,7 +247,7 @@
                     <div class="picture">
                         <img src="/img/movies/suspense/gone_girl.jpg" width="50%" alt="gone_girl">
                         <br><br>
-                        <a class="btn-trailer" href="https://youtu.be/FUK2kdPsBws" target="_blank">Watch Trailer</a>
+                        <a class="btn-trailer" href="https://youtu.be/2-_-1nJf8Vg" target="_blank">Watch Trailer</a>
                     </div>
                     <div class="description">
                         <p>
@@ -263,7 +263,7 @@
                     <div class="picture">
                         <img src="/img/movies/suspense/disturbia.jpg" width="50%" alt="disturbia">
                         <br><br>
-                        <a class="btn-trailer" href="https://youtu.be/FUK2kdPsBws" target="_blank">Watch Trailer</a>
+                        <a class="btn-trailer" href="https://youtu.be/gZWjvseFptg" target="_blank">Watch Trailer</a>
                     </div>
                     <div class="description">
                         <p>
@@ -279,7 +279,7 @@
                     <div class="picture">
                         <img src="/img/movies/suspense/the_number_23.jpg" width="50%" alt="the_number_23">
                         <br><br>
-                        <a class="btn-trailer" href="https://youtu.be/FUK2kdPsBws" target="_blank">Watch Trailer</a>
+                        <a class="btn-trailer" href="https://youtu.be/W1PeQJzoxVM" target="_blank">Watch Trailer</a>
                     </div>
                     <div class="description">
                         <p>
