cambios generales para poder visualizar

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -5,24 +5,24 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="/favicon/trr7.ico">
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="../css/style.css">
     <title>Top Rated Reviews: Contact</title>
 </head>
 <body>
     <header>
         <div class="site-branding">
             <div class="brand-logo">
-                <img src="/brand/trr7.png" alt="trr-logo">
+                <img src="../brand/trr7.png" alt="trr-logo">
             </div>
             <h1 id="title">Top Rated Reviews</h1>
         </div>
         <nav class="menu-simple-menu">
             <ul>
-                <li><a href="/mipagina.html"><span>Main Page</span></a></li>
-                <li><a href="/pages/reviews.html"><span>Reviews</span></a></li>
-                <li><a href="/pages/sucursales.html"><span>About Us</span></a></li>
-                <li><a href="/pages/contacto.html"><span>Contact</span></a></li>
-                <li><a href="/pages/formulario.html"><span>Newsletter</span></a></li>
+                <li><a href="../mipagina.html"><span>Main Page</span></a></li>
+                <li><a href="reviews.html"><span>Reviews</span></a></li>
+                <li><a href="sucursales.html"><span>Where are we?</span></a></li>
+                <li><a href="contacto.html"><span>About Us</span></a></li>
+                <li><a href="formulario.html"><span>Newsletter</span></a></li>
             </ul>
         </nav>
     </header>
