--- a/pages/reviews.html
+++ b/pages/reviews.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="/favicon/trr7.ico">
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="../css/style.css">
     <title>Top Rated Reviews: Reviews</title>
 </head>
 
@@ -13,17 +13,17 @@
     <header>
         <div class="site-branding">
             <div class="brand-logo">
-                <img src="/brand/trr7.png" alt="trr-logo">
+                <img src="../brand/trr7.png" alt="trr-logo">
             </div>
             <h1 id="title">Top Rated Reviews</h1>
         </div>
         <nav class="menu-simple-menu">
             <ul>
-                <li><a href="/mipagina.html"><span>Main Page</span></a></li>
-                <li><a href="/pages/reviews.html"><span>Reviews</span></a></li>
-                <li><a href="/pages/sucursales.html"><span>About Us</span></a></li>
-                <li><a href="/pages/contacto.html"><span>Contact</span></a></li>
-                <li><a href="/pages/formulario.html"><span>Newsletter</span></a></li>
+                <li><a href="../mipagina.html"><span>Main Page</span></a></li>
+                <li><a href="reviews.html"><span>Reviews</span></a></li>
+                <li><a href="sucursales.html"><span>Where are we?</span></a></li>
+                <li><a href="contacto.html"><span>About Us</span></a></li>
+                <li><a href="formulario.html"><span>Newsletter</span></a></li>
             </ul>
         </nav>
     </header>
@@ -34,7 +34,7 @@
             <div class="movies">
                 <div class= "movie">
                     <div class="picture">
-                        <img src="/img/movies/action/fast_and_the_furious_9.jpg" width="50%" alt="fast_and_the_furious_9">
+                        <img src="../img/movies/action/fast_and_the_furious_9.jpg" width="50%" alt="fast_and_the_furious_9">
                         <br><br>
                         <a class="btn-trailer" href="https://youtu.be/FUK2kdPsBws" target="_blank">Watch Trailer</a>
                     </div>
@@ -49,7 +49,7 @@
             <div class="movies">
                 <div class= "movie">
                     <div class="picture">
-                        <img src="/img/movies/action/bullet_train.jpg" width="50%" alt="bullet_train">
+                        <img src="../img/movies/action/bullet_train.jpg" width="50%" alt="bullet_train">
                         <br><br>
                         <a class="btn-trailer" href="https://youtu.be/0IOsk2Vlc4o" target="_blank">Watch Trailer</a>
                     </div>
@@ -65,7 +65,7 @@
             <div class="movies">
                 <div class= "movie">
                     <div class="picture">
-                        <img src="/img/movies/action/65.jpg" width="50%" alt="65">
+                        <img src="../img/movies/action/65.jpg" width="50%" alt="65">
                         <br><br>
                         <a class="btn-trailer" href="https://youtu.be/bHXejJq5vr0" target="_blank">Watch Trailer</a>
                     </div>
@@ -81,7 +81,7 @@
             <div class="movies">
                 <div class= "movie">
                     <div class="picture">
-                        <img src="/img/movies/action/operation_fortune_ruse.jpg" width="50%" alt="operation_fortune_ruse">
+                        <img src="../img/movies/action/operation_fortune_ruse.jpg" width="50%" alt="operation_fortune_ruse">
                         <br><br>
                         <a class="btn-trailer" href="https://youtu.be/WdZ-BWWQcWQ" target="_blank">Watch Trailer</a>
                     </div>
@@ -99,7 +99,7 @@
             <div class="movies">
                 <div class= "movie">
                     <div class="picture">
-                        <img src="/img/movies/comedy/superbad.jpg" width="50%" alt="superbad">
+                        <img src="../img/movies/comedy/superbad.jpg" width="50%" alt="superbad">
                         <br><br>
                         <a class="btn-trailer" href="https://youtu.be/LvKvus3vCEY" target="_blank">Watch Trailer</a>
                     </div>
@@ -115,7 +115,7 @@
             <div class="movies">
                 <div class= "movie">
                     <div class="picture">
-                        <img src="/img/movies/comedy/red.jpg" width="50%" alt="turning_red">
+                        <img src="../img/movies/comedy/red.jpg" width="50%" alt="turning_red">
                         <br><br>
                         <a class="btn-trailer" href="https://youtu.be/XdKzUbAiswE" target="_blank">Watch Trailer</a>
                     </div>
@@ -131,7 +131,7 @@
             <div class="movies">
                 <div class= "movie">
                     <div class="picture">
-                        <img src="/img/movies/comedy/project_x.jpg" width="50%" alt="project_x">
+                        <img src="../img/movies/comedy/project_x.jpg" width="50%" alt="project_x">
                         <br><br>
                         <a class="btn-trailer" href="https://youtu.be/3BEIhA8CcY0" target="_blank">Watch Trailer</a>
                     </div>
@@ -147,7 +147,7 @@
             <div class="movies">
                 <div class= "movie">
                     <div class="picture">
-                        <img src="/img/movies/comedy/horrible_bosses.jpg" width="50%" alt="horrible_bosses">
+                        <img src="../img/movies/comedy/horrible_bosses.jpg" width="50%" alt="horrible_bosses">
                         <br><br>
                         <a class="btn-trailer" href="https://youtu.be/VpUeQV8sdOc" target="_blank">Watch Trailer</a>
                     </div>
@@ -164,7 +164,7 @@
             <div class="movies">
                 <div class= "movie">
                     <div class="picture">
-                        <img src="/img/movies/drama/manchester_by_the_Sea.jpg" width="50%" alt="manchester_by_the_Sea">
+                        <img src="../img/movies/drama/manchester_by_the_Sea.jpg" width="50%" alt="manchester_by_the_Sea">
                         <br><br>
                         <a class="btn-trailer" href="https://youtu.be/gsVoD0pTge0" target="_blank">Watch Trailer</a>
                     </div>
@@ -180,7 +180,7 @@
             <div class="movies">
                 <div class= "movie">
                     <div class="picture">
-                        <img src="/img/movies/drama/hachi_a_dogs_tale.jpg" width="50%" alt="hachi_a_dogs_tale">
+                        <img src="../img/movies/drama/hachi_a_dogs_tale.jpg" width="50%" alt="hachi_a_dogs_tale">
                         <br><br>
                         <a class="btn-trailer" href="https://youtu.be/Y6U7mAnPtw4" target="_blank">Watch Trailer</a>
                     </div>
@@ -196,7 +196,7 @@
             <div class="movies">
                 <div class= "movie">
                     <div class="picture">
-                        <img src="/img/movies/drama/million_dollar_baby.jpg" width="50%" alt="million_dollar_baby">
+                        <img src="../img/movies/drama/million_dollar_baby.jpg" width="50%" alt="million_dollar_baby">
                         <br><br>
                         <a class="btn-trailer" href="https://youtu.be/2FkyuKKtQqo" target="_blank">Watch Trailer</a>
                     </div>
@@ -212,7 +212,7 @@
             <div class="movies">
                 <div class= "movie">
                     <div class="picture">
-                        <img src="/img/movies/drama/three_billboards_outside.jpg" width="50%" alt="three_billboards_outside">
+                        <img src="../img/movies/drama/three_billboards_outside.jpg" width="50%" alt="three_billboards_outside">
                         <br><br>
                         <a class="btn-trailer" href="https://youtu.be/Jit3YhGx5pU" target="_blank">Watch Trailer</a>
                     </div>
@@ -229,7 +229,7 @@
             <div class="movies">
                 <div class= "movie">
                     <div class="picture">
-                        <img src="/img/movies/suspense/midsommar.jpg" width="50%" alt="midsommar">
+                        <img src="../img/movies/suspense/midsommar.jpg" width="50%" alt="midsommar">
                         <br><br>
                         <a class="btn-trailer" href="https://youtu.be/1Vnghdsjmd0" target="_blank">Watch Trailer</a>
                     </div>
@@ -245,7 +245,7 @@
             <div class="movies">
                 <div class= "movie">
                     <div class="picture">
-                        <img src="/img/movies/suspense/gone_girl.jpg" width="50%" alt="gone_girl">
+                        <img src="../img/movies/suspense/gone_girl.jpg" width="50%" alt="gone_girl">
                         <br><br>
                         <a class="btn-trailer" href="https://youtu.be/2-_-1nJf8Vg" target="_blank">Watch Trailer</a>
                     </div>
@@ -261,7 +261,7 @@
             <div class="movies">
                 <div class= "movie">
                     <div class="picture">
-                        <img src="/img/movies/suspense/disturbia.jpg" width="50%" alt="disturbia">
+                        <img src="../img/movies/suspense/disturbia.jpg" width="50%" alt="disturbia">
                         <br><br>
                         <a class="btn-trailer" href="https://youtu.be/gZWjvseFptg" target="_blank">Watch Trailer</a>
                     </div>
@@ -277,7 +277,7 @@
             <div class="movies">
                 <div class= "movie">
                     <div class="picture">
-                        <img src="/img/movies/suspense/the_number_23.jpg" width="50%" alt="the_number_23">
+                        <img src="../img/movies/suspense/the_number_23.jpg" width="50%" alt="the_number_23">
                         <br><br>
                         <a class="btn-trailer" href="https://youtu.be/W1PeQJzoxVM" target="_blank">Watch Trailer</a>
                     </div>
